[gd_scene load_steps=3 format=3 uid="uid://cp1hsahnmkj22"]

[ext_resource type="Script" uid="uid://bkc6r3xodj3h7" path="res://inventory.gd" id="1_pohso"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c0rdb"]
size = Vector2(96, 82)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pohso")

[node name="InventorySlot1" type="Node2D" parent="."]
position = Vector2(134, 537)

[node name="Area2D" type="Area2D" parent="InventorySlot1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InventorySlot1/Area2D"]
position = Vector2(2, 1)
shape = SubResource("RectangleShape2D_c0rdb")

[node name="InventorySlot2" type="Node2D" parent="."]
position = Vector2(306, 534)

[node name="Area2D2" type="Area2D" parent="InventorySlot2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InventorySlot2/Area2D2"]
position = Vector2(2, 1)
shape = SubResource("RectangleShape2D_c0rdb")

[connection signal="area_entered" from="InventorySlot1/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="InventorySlot2/Area2D2" to="." method="_on_area_2d_2_area_entered"]
